feat(attribute): get attribute values
- get a list of attribute values

[Delivers: #170575666]
