# src/swagger.json
@@ -588,15 +588,11 @@
         }
       },
       "get": {
-        "tags": [
-          "Attributes"
-        ],
+        "tags": ["Attributes"],
         "summary": "Get all attributes",
         "description": "Get all attributes",
         "operationId": "getAllAttributes",
-        "produces": [
-          "application/json"
-        ],
+        "produces": ["application/json"],
         "responses": {
           "200": {
             "description": "An array of attributes",
@@ -649,6 +645,27 @@
             "description": "unauthorized",
             "schema": {
               "$ref": "#/components/schemas/authError"
+            }
+          }
+        }
+      },
+      "get": {
+        "tags": ["Attributes"],
+        "summary": "Return a list of Attribute Values",
+        "description": "Return a list of Attribute Values",
+        "operationId": "getAttributeValues",
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "Return a list of Attribute Values",
+            "schema": {
+              "$ref": "#/components/schemas/allAttributeValuesResponse"
+            }
+          },
+          "404": {
+            "description": "not found",
+            "schema": {
+              "$ref": "#/components/schemas/notFoundResponse"
             }
           }
         }
@@ -1187,12 +1204,31 @@
           }
         }
       },
-        "allAttributesResponse": {
-          "type": "array",
-          "items": {
-            "$ref": "#/components/schemas/attributeResponse"
+      "attributeValuesResponse": {
+        "type": "object",
+        "properties": {
+          "attribute_value_id": {
+            "type": "interger",
+            "example": 1
+          },
+          "values": {
+            "type": "string",
+            "example": "XXL"
           }
-        },
+        }
+      },
+      "allAttributesResponse": {
+        "type": "array",
+        "items": {
+          "$ref": "#/components/schemas/attributeResponse"
+        }
+      },
+      "allAttributeValuesResponse": {
+        "type": "array",
+        "items": {
+          "$ref": "#/components/schemas/attributeValuesResponse"
+        }
+      },
       "notFoundResponse": {
         "type": "object",
         "properties": {
